added caching input

--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -1,14 +1,20 @@
 name: 'Get cache dependencies'
 description: 'An action to get cached dependencies for faster builds'
+inputs:
+  caching:
+    description: 'Whether to cache dependencies or not'
+    required: false
+    default: 'true'
 runs:
   using: 'composite'
   steps:
     - name: 'Restore cached dependencies'
+      if: ${{ inputs.caching == 'true' }}
       uses: actions/cache@v4
       with:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
     - name: 'Install dependencies if cache miss'
-      if: steps.cache.outputs.cache-hit != 'true'
+      if: steps.cache.outputs.cache-hit != 'true' || ${{ inputs.caching != 'true' }}
       run: npm ci
       shell: bash
