--- a/.github/actions/cached-deps/action.yml
+++ b/.github/actions/cached-deps/action.yml
@@ -9,12 +9,13 @@ runs:
   using: 'composite'
   steps:
     - name: 'Restore cached dependencies'
+      id: cache
       if: ${{ inputs.caching == 'true' }}
       uses: actions/cache@v4
       with:
         path: node_modules
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
     - name: 'Install dependencies if cache miss'
-      if: steps.cache.outputs.cache-hit != 'true' || ${{ inputs.caching != 'true' }}
+      if: ${{ inputs.caching == 'false' || steps.cache.outputs.cache-hit != 'true' }}
       run: npm ci
       shell: bash
