Add JS custom action and ignore action node_modules

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,3 +64,9 @@ jobs:
         run: ls
       - name: Deploy site
         run: echo "Deploying..."
+  information:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify team
+        uses: ./github/actions/deploy-s3-javascript
