--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,5 +68,7 @@ jobs:
     needs: deploy
     runs-on: ubuntu-latest
     steps:
+      - name: Get code
+        uses: actions/checkout@v4
       - name: Notify team
         uses: ./github/actions/deploy-s3-javascript
